--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    @apply tracking-tight font-light text-center;
+    @apply tracking-tight font-light text-left;
   }
 
   p, span, a, li {
