--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,8 @@
     @apply opacity-100 translate-y-0;
   }
 
-  .placeholder-white::placeholder {
-    color: #fff; /* Or any other white color value like white, rgba(255, 255, 255, 0.8), etc. */
+  .placeholder-black::placeholder {
+    color: #0f0f0f; /* Or any other white color value like white, rgba(255, 255, 255, 0.8), etc. */
     opacity: 1; /* Ensure the placeholder isn't faded by default */
   }
 }
