--- a/src/index.css
+++ b/src/index.css
@@ -97,4 +97,8 @@
     color: #0f0f0f; /* Or any other white color value like white, rgba(255, 255, 255, 0.8), etc. */
     opacity: 1; /* Ensure the placeholder isn't faded by default */
   }
+
+  .custom-select-placeholder-black option:first-child {
+    color: #0f0f0f; /* Or any other white color value */
+  }
 }
